# Corrier

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
corrier-core/: Cargo.toml
corrier-core/src/: adapter.rs  agent_subjects.rs  chat_subjects.rs  lib.rs  message.rs  routing.rs
corrier-matrix/: Cargo.toml
corrier-matrix/src/: inbound.rs  lib.rs  matrix_adapter.rs  registration.rs  rendering.rs
corrier-read-gateway/: Cargo.toml
corrier-read-gateway/src/: main.rs
corrier-read-gateway/tests/: transaction_handler_test.rs
corrier-write-gateway/: Cargo.toml
corrier-write-gateway/src/: main.rs
deploy/charts/corrier/: Chart.yaml  values.yaml
deploy/charts/corrier/templates/: read-gateway.yaml  write-gateway.yaml
