[package]
name = "corrier-matrix"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
corrier-core = { path = "../corrier-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
pulldown-cmark = "0.12"
uuid = { version = "1", features = ["v4"] }
