[package]
name = "corrier-read-gateway"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
corrier-core = { path = "../corrier-core" }
corrier-matrix = { path = "../corrier-matrix" }
tokio = { workspace = true }
axum = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nervi-core = { path = "../../nervi/nervi-core" }
